# vlc_plugin_img_process

./: CMakeLists.txt  README.md  image_aamr.c  image_aamr.h  image_process.c
aamr/: CMakeLists.txt
aamr/include/: aamr.h  common.h
aamr/src/: aamr.c
cmake/: toolchain.linux.cmake  toolchain.mingw32.cmake
lic/: CMakeLists.txt
lic/examples/: console_sign.c  console_verify.c
lic/include/: lic_common.h  lic_sign.h  lic_verify.h
lic/src/: certificate.c  certificate.h  certificate_unittest.cc  lic_machine_cert.c  lic_machine_cert.h  lic_platform_device_uuid.c  lic_platform_device_uuid.h  lic_sign.c  lic_verify.c
