CMAKE_MINIMUM_REQUIRED(VERSION 3.16.0)

PROJECT(AAMR VERSION 0.1.0 LANGUAGES C)

# Public API
SET(AAMR_INCLUDE_DIR ./include)
SET(PUBLIC_HEADERS
    ${AAMR_INCLUDE_DIR}/common.h
    ${AAMR_INCLUDE_DIR}/aamr.h
)
SOURCE_GROUP("Public API" FILES ${PUBLIC_HEADERS})

SET(SRC_LIST
    src/aamr.c)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC_LIST} ${PUBLIC_HEADERS})
TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE AAMR_EXPORT)
ADD_LIBRARY(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${AAMR_INCLUDE_DIR})

INSTALL( TARGETS ${PROJECT_NAME} DESTINATION ${IMAGE_PROCESS_INSTALL_DIR} )